# cvlod_recomp

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  FUNCTION_MAP.md  README.md  SCRATCHBOOK.md  build.py  build_elf.sh  castlevania2.ld  castlevania2.syms.toml  castlevania2.yaml  castlevania2_pal.yaml  docker_build.sh  fix_symbols.py  fix_yaml.py  overlays.txt  patch_asm.py  recomp.toml  reloc_addrs.txt  run.sh  scan_stubs.py  scan_symbols.py  super_build.py  symbol_addrs.txt
.github/macos/: ld64  make_app.sh
.github/release/: README-linux.txt  README-windows.txt  lodrecomp.desktop
.github/workflows/: build.yml
.obsidian/: workspace.json
RecompiledFuncs/: funcs_0.c  funcs_1.c  funcs_11.c  funcs_12.c  funcs_13.c  funcs_2.c  funcs_20.c  funcs_37.c  funcs_44.c  funcs_60.c  funcs_62.c  funcs_65.c  funcs_69.c  funcs_7.c
asm/: 1000.s  10100.s  1060.s  113D0.s  12700.s  12900.s  15C80.s  16510.s  16640.s  17040.s  172F0.s  17A00.s  18430.s  186E0.s  18E40.s  18FC0.s  19340.s  19570.s  19620.s  19630.s  19E20.s  19F40.s  1AE50.s  1C830.s  22350.s  25F80.s  2BC60.s  2D5D0.s  2FA90.s  333F0.s  3550.s  39330.s  3F870.s  407B0.s  451C0.s  458C0.s  45C80.s  46140.s  46520.s  47AA0.s  (+99 more)
asm/audio/: audio.s  audioMgr.s
asm/common/: actor_creator.s  candle.s  cutscene.s  cutscene_manager.s  cutscene_trigger.s  distortion.s  door.s  elevator.s  file_select.s  gameplay_common_textbox.s  gameplay_menu_manager.s  glance.s  hud.s  hud_params.s  interactables.s  interactables_helpers.s  item.s  lens.s  lever.s  loading_zone.s  map.s  map_manager.s  mark.s  mark_work.s  menu_alloc_struct.s  mini_scroll_setup.s  necro_work.s  necronomicon.s  object_017C.s  options_controller.s  page.s  page_work.s  renon_shop.s  river_water.s  room.s  scroll.s  skybox_common_actors.s  sound_range.s  squash_point.s  stage_select.s  (+2 more)
asm/data/: 10100.data.s  107710.data.s  1077B0.data.s  1078C0.data.s  107B70.data.s  107C80.data.s  107FC0.data.s  107FE0.data.s  1080F0.data.s  108160.data.s  108180.data.s  10BAF0.data.s  10CF20.data.s  10DC80.data.s  10DD50.data.s  10DE20.data.s  10F180.data.s  110F00.data.s  110F20.data.s  111280.data.s  111710.data.s  111800.data.s  111EC0.data.s  111F10.data.s  112610.data.s  112630.data.s  112640.data.s  1126B0.data.s  1127B0.data.s  1128B0.data.s  112DF0.data.s  112E30.data.s  112E70.data.s  112F40.data.s  112FF0.data.s  113010.data.s  113040.data.s  113080.data.s  113D0.data.s  12900.data.s  (+74 more)
asm/data/audio/: audioMgr.data.s
asm/data/common/: cutscene_manager.data.s  cutscene_trigger.data.s  distortion.data.s  gameplay_common_textbox.data.s  gameplay_menu_manager.data.s  hud.data.s  interactables.data.s  interactables_helpers.data.s  interactables_tables.data.s  lens.data.s  necro_work.data.s  necronomicon.data.s  object_017C.data.s  page.data.s  page_work.data.s  renon_shop.data.s  skybox_common_actors.data.s  stage_select.data.s
asm/data/effect/: fire.data.s  fire_sparkles.data.s
asm/effect/: fire.s  fire_sparkles.s
asm/libultra/al/: sl.s  synallocvoice.s  (+1 more)
assets/: lod_config.rml  lod_launcher.rml  recomp.rcss
assets/config_menu/: controls.rml  debug.rml  general.rml  graphics.rml  sound.rml
config/: castlevania2.d  castlevania2.ld  castlevania2.yaml  cv64_config.yaml  lod.nd4e.toml  overlays.nd4e.txt  patches.toml
docs/: N64_Recompilation_Guide_2026.md  N64_Recompilation_Guide_OLD.md  RECOMP_STATUS.md  RECOMP_UI_IMPLEMENTATION.md  RECOMP_UI_SPEC.md  RECOVERY_TO_GAMEPLAY.md  RUNTIME_INTEGRATION.md  ZELDA_MENU_DEFINITIVE_PLAN.md  ZELDA_MENU_PORT.md  controller-pak-approaches.md
include/: lod_symbols.h  recomp_input.h  recomp_ui.h  zelda_config.h  zelda_support.h
include/lod/: lod_audio_config.hpp  lod_fault_trace.hpp  lod_mem_compat.h  lod_paths.hpp  lod_render.h  lod_settings.hpp  lod_support.h  target_rom.hpp
lib/SlotMap/: slot_map.h
lib/concurrentqueue/: concurrentqueue.h
patches/: recompiled_funcs.patch
rsp/: aspMain.cpp  aspMain_audio_recomp.cpp
src/: funcs.cpp  game.cpp  game_stubs.h  game_thread_stubs.cpp  hardware.cpp  hardware.h  libultra_wrappers.cpp  main.cpp  memory.h  rt64_context.cpp  test_funcs_stub.cpp  test_runtime.cpp
src/common/: cutscene_manager.c  gameplay_menu_manager.c  hud_params.c  interactables.c  menu_alloc_struct.c  mini_scroll_setup.c  necro_work.c  necronomicon.c  page.c
src/main/: ignored_func_stubs.cpp  lod_init.cpp  lod_recomp.manifest  lod_recomp.rc  lod_recomp.rc.in  lod_version.h.in  main.cpp  ni_overlay_loader.cpp  ni_ovl_data.h  ni_ovl_fingerprints.h  register_overlays.cpp  rt64_render_context.cpp  support.cpp  support_apple.mm  tlb_segment.cpp
src/ui/: lod_ui_overlay.cpp  lod_ui_overlay.h  lod_zelda_menu.cpp  ui_api.cpp  ui_config.cpp  ui_config_sub_menu.h  ui_elements.cpp  ui_elements.h  ui_helpers.h  ui_mod_details_panel.cpp  ui_mod_installer.cpp  ui_mod_installer.h  ui_mod_menu.cpp  ui_prompt.cpp  ui_renderer.cpp  ui_renderer.h  ui_state.cpp  ui_utils.cpp
symbols/: stubs.txt  symbol_addrs.txt  undefined_funcs_auto.txt  undefined_syms_auto.txt
tests/dl_harness/: CMakeLists.txt  main.cpp
tests/pak/: CMakeLists.txt  main.cpp
tests/sanity/: CMakeLists.txt  main.cpp  view_verts.py
tools/: apply_patches.py  apply_symbols.py  audit_indirect_targets.py  audit_map_hidden_boundaries.py  auto_fix_symbols.py  auto_stub_errors.py  build.py  check_version.py  ci_smoke.py  copy_release_assets.py  decompress.py  decompress_lod.py  dump_emu_state.py  extract_ni.py  fix_all_static.py  fix_n64recomp_truncation.py  fix_recompiled.py  fix_static_funcs.py  fix_symbols.py  fix_undeclared_labels.py  fix_yaml.py  gen_func_table.py  gen_stubs.py  liblzkn64.py  match_cv64.py  patch_asm.py  regen_recomp.sh  scan_stubs.py  scan_symbols.py  smoke_zelda_release.sh  super_build.py  validate_config.py
tools/ni_ovl/: .gitignore  find_label_stubs.sh  find_stubs.sh  fix_label_errors.py  fix_overlay_table.py  fix_undeclared_labels.py  repair_overlay_table.py  step1_dump_table.py  step2_decompress.py  step3_boundaries.py  step4_functions.py  step6_extended_rom.py  step7_gen_syms.py
(+302 files in other folders)
